force-app/main/default/objects/Quality_Assessment__c/fields/CM_used_LEAP_call_control__c.field-meta.xml
<CustomField>
    <fullName>CM_used_LEAP_call_control__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Call Question 3</description>
    <inlineHelpText>During the call did the CM use LEAP and demonstrate call control?

Listen, Empathise, Acknowledge/Apologise, Propose Action 
·       Was the CM empathetic and courteous?
·       Did they advise of the call purpose?</inlineHelpText>
    <label>CM used LEAP &amp; call control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>