force-app/main/default/objects/Quality_Assessment__c/fields/CMOS_Comment_10__c.field-meta.xml
<CustomField>
    <fullName>CMOS_Comment_10__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>More details provided when No is selected in any Success Measure question.</description>
    <label>Comments</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>