force-app/main/default/objects/Quality_Assessment__c/fields/CMOS_Comment_11__c.field-meta.xml
<CustomField>
    <fullName>CMOS_Comment_11__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>More details provided when No is selected in any Success Measure question.</description>
    <label>Comments</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>