force-app/main/default/objects/Quality_Assessment__c/fields/CN_Customers_Focus__c.field-meta.xml
<CustomField>
    <fullName>CN_Customers_Focus__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Case notes question: Customer&apos;s Focus (record of advice)</description>
    <label>Case notes - customer&apos;s focus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_V2_Ratings</valueSetName>
    </valueSet>
</CustomField>