force-app/main/default/objects/Quality_Assessment__c/fields/CN_Fact_Find_Comments__c.field-meta.xml
<CustomField>
    <fullName>CN_Fact_Find_Comments__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Case Notes comments: Fact Find (record of advice)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Case notes - fact find comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>