force-app/main/default/objects/Quality_Assessment__c/fields/CN_OFSN_Comments__c.field-meta.xml
<CustomField>
    <fullName>CN_OFSN_Comments__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Case Notes comments: OFSN (record of advice)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Case notes - OFSN comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>