force-app/main/default/objects/Quality_Assessment__c/fields/CN_Out_of_Scope__c.field-meta.xml
<CustomField>
    <fullName>CN_Out_of_Scope__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Case notes question: Out of Scope (record of advice)</description>
    <label>Case notes - out of scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QA_V2_Ratings</valueSetName>
    </valueSet>
</CustomField>