force-app/main/default/objects/Quality_Assessment__c/fields/CN_Substantive_Advice_Comments__c.field-meta.xml
<CustomField>
    <fullName>CN_Substantive_Advice_Comments__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Case Notes comments: Substantive Advice (record of advice)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Case notes - substantive advice comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>