force-app/main/default/objects/Quality_Assessment__c/fields/Collateral_Valuation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Valuation_Comments__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Comments for the Collateral - Valuation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Collateral - Valuation Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>