force-app/main/default/objects/Quality_Assessment__c/fields/Collateral_Valuation_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Valuation_Outcome__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Specifies the outcome for the Collateral - Valuation</description>
    <label>Collateral - Valuation Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requirements Met</fullName>
            </value>
            <value>
                <fullName>Requirements Not Met (Process only)</fullName>
            </value>
            <value>
                <fullName>Requirements Not Met (Compliance)</fullName>
            </value>
            <value>
                <fullName>N/A - all codes dropped off / resolved by other action</fullName>
            </value>
            <value>
                <fullName>N/A - No referral codes/checks generated for category</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>