force-app/main/default/objects/Quality_Assessment__c/fields/Collateral_Valuation_Referral_Codes__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Valuation_Referral_Codes__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Referral Codes for the Collateral - Valuation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Collateral - Valuation Referral Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>