force-app/main/default/objects/Quality_Assessment__c/fields/Complaint_issues_identified_addressed__c.field-meta.xml
<CustomField>
    <fullName>Complaint_issues_identified_addressed__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Assessment question 1</description>
    <inlineHelpText>For final responses where we rejected, or partially rejected, the outcome sought by the customer: does the response clearly identify and address the issues raised in the complaint?</inlineHelpText>
    <label>Complaint issues identified/addressed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>