force-app/main/default/objects/Quality_Assessment__c/fields/Complaint_outcome_Actual__c.field-meta.xml
<CustomField>
    <fullName>Complaint_outcome_Actual__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Complaint outcome (Actual)</description>
    <label>Complaint outcome (Actual)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In favour of ANZ</fullName>
            </value>
            <value>
                <fullName>In favour of customer (full)</fullName>
            </value>
            <value>
                <fullName>In favour of customer (partial)</fullName>
            </value>
            <value>
                <fullName>N/A - open case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>