force-app/main/default/objects/Quality_Assessment__c/fields/Complaint_outcome_CMOS__c.field-meta.xml
<CustomField>
    <fullName>Complaint_outcome_CMOS__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Reference to complaint outcome field in related case</description>
    <formula>IF(RecordType.DeveloperName = &apos;C_Q_Assessment&apos;, Related_Case__r.IDR_Complaint_Outcome_Text__c,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint outcome (CMOS)</label>
    <type>Text</type>
</CustomField>