force-app/main/default/objects/Quality_Assessment__c/fields/Compliance_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Outcome__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Capture the QA outcome</description>
    <label>Compliance Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requirements Met</fullName>
            </value>
            <value>
                <fullName>Requirements not met</fullName>
            </value>
            <value>
                <fullName>Advice / Consent / Disclaimers / Warnings Category</fullName>
                <isActive>false</isActive>
                <label>Advice / Consent / Disclaimers / Warnings Category</label>
            </value>
            <value>
                <fullName>ID &amp; Privacy Category</fullName>
                <isActive>false</isActive>
                <label>ID &amp; Privacy Category</label>
            </value>
            <value>
                <fullName>Multiple Categories</fullName>
                <isActive>false</isActive>
                <label>Multiple Categories</label>
            </value>
            <value>
                <fullName>Obligations / Anti-Hawking Category</fullName>
                <isActive>false</isActive>
                <label>Obligations / Anti-Hawking Category</label>
            </value>
            <value>
                <fullName>Potential Financial Impacts, Information &amp; Actions Category</fullName>
                <isActive>false</isActive>
                <label>Potential Financial Impacts, Information &amp; Actions Category</label>
            </value>
            <value>
                <fullName>Yes - Requirements met</fullName>
                <isActive>false</isActive>
                <label>Yes - Requirements met</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>