force-app/main/default/objects/Quality_Assessment__c/fields/Conduct_Comments__c.field-meta.xml
<CustomField>
    <fullName>Conduct_Comments__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Comments for the Conduct</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Conduct Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>