force-app/main/default/objects/Quality_Assessment__c/fields/Confirmation_of_resolution_letter_used__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_of_resolution_letter_used__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Confirmation of resolution letter used</description>
    <label>Confirmation of resolution letter used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>