force-app/main/default/objects/Quality_Assessment__c/fields/Connection_and_Trust__c.field-meta.xml
<CustomField>
    <fullName>Connection_and_Trust__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Connection and Trust outcome to be captured by the user based on the call review</description>
    <label>Connection and Trust</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Evaluation_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Quality_Assessment_Rating</valueSetName>
    </valueSet>
</CustomField>