force-app/main/default/objects/Quality_Assessment__c/fields/Connection_and_Trust_Comments__c.field-meta.xml
<CustomField>
    <fullName>Connection_and_Trust_Comments__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>A field for the analyst to capture the Connection and Trust Comments</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Connection and Trust Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>