force-app/main/default/objects/Quality_Assessment__c/fields/Connection_Trust_Top_Line__c.field-meta.xml
<CustomField>
    <fullName>Connection_Trust_Top_Line__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Multi-select values for the Connection &amp; Trust.</description>
    <label>Connection &amp; Trust Top Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tone of Voice / Chat Guidelines</fullName>
            </value>
            <value>
                <fullName>Confident &amp; Precise Phrasing</fullName>
            </value>
            <value>
                <fullName>Addressing Emotional Needs First</fullName>
            </value>
            <value>
                <fullName>Spelling &amp; Grammar</fullName>
            </value>
            <value>
                <fullName>Rapport Building</fullName>
            </value>
            <value>
                <fullName>Presence &amp; Responsiveness</fullName>
            </value>
            <value>
                <fullName>Personalisation</fullName>
            </value>
            <value>
                <fullName>Responding with warmth &amp; care</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>