force-app/main/default/objects/Quality_Assessment__c/fields/Context_and_General_Comments__c.field-meta.xml
<CustomField>
    <fullName>Context_and_General_Comments__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>A field for the analyst to capture the Context and General Comments</description>
    <label>Context and General Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>