force-app/main/default/objects/Quality_Assessment__c/fields/COR_Event__c.field-meta.xml
<CustomField>
    <fullName>COR_Event__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>COR Event</description>
    <inlineHelpText>Used to indicate if this relates to a COR Event</inlineHelpText>
    <label>NFR Event</label>
    <type>Checkbox</type>
</CustomField>