force-app/main/default/objects/Quality_Assessment__c/fields/COR_Event_Number__c.field-meta.xml
<CustomField>
    <fullName>COR_Event_Number__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>NFR Event Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Used to record the associated COR Event number where applicable</inlineHelpText>
    <label>NFR Event Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>