force-app/main/default/objects/Quality_Assessment__c/fields/Correct_financial_remedy_approach__c.field-meta.xml
<CustomField>
    <fullName>Correct_financial_remedy_approach__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Letter Question 8</description>
    <inlineHelpText>Have we specified the right financial loss approach for compensation and confirmed the amount, account and timeframe?

Have we applied relevant principles and correctly calculate the customer’s financial loss?</inlineHelpText>
    <label>Correct financial remedy approach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>