force-app/main/default/objects/Quality_Assessment__c/fields/Correct_template_used_tailored_to_case__c.field-meta.xml
<CustomField>
    <fullName>Correct_template_used_tailored_to_case__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Letter Question 9</description>
    <inlineHelpText>Have we used and tailored the correct template to the specific case, and removed irrelevant information?

In tailoring the template have we removed irrelevant paragraphs and added additional relevant paragraphs.</inlineHelpText>
    <label>Correct template used/tailored to case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>