force-app/main/default/objects/Quality_Assessment__c/fields/Corrective_actions_for_C_Q_to_complete__c.field-meta.xml
<CustomField>
    <fullName>Corrective_actions_for_C_Q_to_complete__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Corrective actions for C&amp;Q to complete</description>
    <label>Corrective actions for C&amp;Q to complete</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Raised PSI for non-complaints handling issue</fullName>
            </value>
            <value>
                <fullName>Raised PSI for complaints handling issue</fullName>
            </value>
            <value>
                <fullName>Raised REaL for non-complaints handling issue</fullName>
            </value>
            <value>
                <fullName>Raised REaL for complaints handling issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>