force-app/main/default/objects/Quality_Assessment__c/fields/Corrective_actions_for_TM_CM__c.field-meta.xml
<CustomField>
    <fullName>Corrective_actions_for_TM_CM__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Corrective actions for TM/CM</description>
    <label>Corrective actions for TM/CM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coaching recommended</fullName>
                <label>TM Coaching/Feedback recommended</label>
            </value>
            <value>
                <fullName>Review customer correspondence/contact customer</fullName>
            </value>
            <value>
                <fullName>Update internal records</fullName>
            </value>
            <value>
                <fullName>Further action recommended</fullName>
                <label>Other further action recommended</label>
            </value>
            <value>
                <fullName>N/A- no action required</fullName>
            </value>
            <value>
                <fullName>Further review due to potential customer detriment</fullName>
            </value>
            <value>
                <fullName>Reissue IDR / EDR letter</fullName>
            </value>
            <value>
                <fullName>Address customer inquiry / provide documentation</fullName>
            </value>
            <value>
                <fullName>Complete outstanding actions as agreed with customer</fullName>
            </value>
            <value>
                <fullName>Update CMOS fields or internal records</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>