force-app/main/default/objects/Quality_Assessment__c/fields/Corrective_actions_required_CM__c.field-meta.xml
<CustomField>
    <fullName>Corrective_actions_required_CM__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Lists corrective actions to be completed by the related case owner</description>
    <label>Corrective actions required CM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Final letter not compliant</fullName>
            </value>
            <value>
                <fullName>Vulnerability / extra care not identified or provided</fullName>
            </value>
            <value>
                <fullName>Hardship notice not identified or responded to promptly</fullName>
            </value>
            <value>
                <fullName>Timeliness requirements not met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>