force-app/main/default/objects/Quality_Assessment__c/fields/Corrective_actions_required_TL__c.field-meta.xml
<CustomField>
    <fullName>Corrective_actions_required_TL__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Lists corrective actions to be completed by the TL of the related case owner</description>
    <label>Corrective actions required TL</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Further review due to potential customer detriment</fullName>
            </value>
            <value>
                <fullName>Reissue IDR/EDR letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>