force-app/main/default/objects/Quality_Assessment__c/fields/Corrective_actions_requiring_FL_action__c.field-meta.xml
<CustomField>
    <fullName>Corrective_actions_requiring_FL_action__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Corrective actions requiring FL action</description>
    <label>Corrective actions requiring FL action</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update CMOS fields or internal records</fullName>
            </value>
            <value>
                <fullName>Contact customer to correct factual inaccuracies (do not reopen complaint)</fullName>
            </value>
            <value>
                <fullName>Address customer inquiry / provide documentation</fullName>
            </value>
            <value>
                <fullName>Complete outstanding actions agreed with customer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>