force-app/main/default/objects/Quality_Assessment__c/fields/Credit_reporting_notice_obligations_met__c.field-meta.xml
<CustomField>
    <fullName>Credit_reporting_notice_obligations_met__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>SUCCESS MEASURE 5 Q2</description>
    <inlineHelpText>We met our notification obligations for complaints about an entry/ies on a credit report (if applicable).</inlineHelpText>
    <label>Credit reporting notice obligations met?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Not met</fullName>
            </value>
            <value>
                <fullName>Not met (outside CM control)</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>