force-app/main/default/objects/Quality_Assessment__c/fields/Cust_interactions_accurately_recorded__c.field-meta.xml
<CustomField>
    <fullName>Cust_interactions_accurately_recorded__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Resolution Assessment question 18</description>
    <inlineHelpText>Are all customer interactions, such as letters, emails, phone calls, and text messages, accurately recorded/ captured?</inlineHelpText>
    <label>Cust interactions accurately recorded?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
            <value>
                <fullName>Not Met (Out of Case Handler’s control)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>